[workspace]
resolver = "2"
members = [
	"crates/*",
	"apps/freenet-ping/app",
	"apps/freenet-ping/types",
	"apps/freenet-ping/contracts/ping",
	"tests/test-contract-integration",
	"tests/test-contract-update-nochange"
]

[workspace.dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
axum = { version = "0.8", default-features = false }
blake3 = { version = "1", features = ["std", "traits-preview"] }
bs58 = "0.5"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chrono = { version = "0.4", default-features = true }
clap = "4"
crossbeam = "0.8"
ctrlc = { version = "3" }
dashmap = "^6.1"
either = "1"
futures = "0.3"
rand = { version = "0.9" }
semver = { version = "1",  features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
testresult = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
wasmer = "6.1.0"
wasmer-compiler-singlepass = "7.0.1"

freenet-stdlib = { version = "0.1.31" }

[profile.dev.package."*"]
opt-level = 3

# [profile.release]
# strip = true
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"
