[workspace]
resolver = "2"
members = [
	"crates/*",
	"apps/freenet-ping/app",
	"apps/freenet-ping/types",
	"apps/freenet-ping/contracts/ping",
	"tests/test-contract-integration",
	"tests/test-contract-update-nochange",
	"tests/test-contract-mock-aligned"
]

[workspace.dependencies]
# Core utilities
ahash = "0.8"
boot-time = "0.1.3"
anyhow = "1"
arrayvec = { version = "0.7", features = ["serde"] }
bincode = "1"
byteorder = "1"
bytes = { version = "1", features = ["serde"] }
delegate = "0.13"
either = "1"
event-listener = "5"
hex = "0.4"
parking_lot = "0.12"
pav_regression = "0.7.0"
renegade-ml = "0.3.3"
pin-project = "1"
thiserror = "2"
ulid = { version = "1.1", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }

# Async/networking
axum = { version = "0.8", default-features = false }
futures = "0.3"
socket2 = "0.6"
headers = "0.4"
hickory-resolver = { version = "0.26", default-features = false, features = ["tokio", "system-config", "tls-ring"] }
http = "1.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.18"
tokio-tungstenite = "0.27.0"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Crypto
aes-gcm = "0.10"
blake3 = { version = "1", features = ["std", "traits-preview"] }
bs58 = "0.5"
chacha20poly1305 = "0.10"
sha2 = "0.11"
x25519-dalek = { version = "2", features = ["static_secrets"] }

# Data structures/storage
dashmap = "6.2"
lru = "0.18.0"
redb = "4"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "sqlite"] }
moka = { version = "0.12", features = ["sync"] }

# File I/O
directories = "6"
dirs = "6"
flate2 = "1"
notify = "8"
tar = "0.4"
tempfile = "3"
xz2 = "0.1"

# Serialization
flatbuffers = "25.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
toml = "1.0"

# CLI
clap = "4"
ctrlc = "3"

# Time
chrono = { version = "0.4", default-features = true }

# Random
rand = "0.9"

# Observability
opentelemetry = "0.32"
opentelemetry-jaeger = "0.22"
opentelemetry-otlp = "0.32.0"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = "0.3"
console-subscriber = "0.5.0"

# WASM
# v43.0.1 has a linker error on macOS x86_64 cross-compilation due to the
# stack-switching feature (undefined symbol wasmtime_continuation_start).
# Disable default features and re-enable all defaults except stack-switching.
# TODO: Re-enable default features once upstream fixes the linker regression.
wasmtime = { version = "44", default-features = false, features = [
    "anyhow", "async", "backtrace", "cache", "cranelift",
    "compile-time-builtins", "component-model", "component-model-async",
    "coredump", "debug", "debug-builtins", "demangle", "addr2line",
    "gc", "gc-drc", "gc-null", "parallel-compilation", "pooling-allocator",
    "profiling", "runtime", "std", "threads", "wat",
] }

# Testing/simulation
arbitrary = { version = "1", features = ["derive"] }
criterion = { version = "0.8", features = ["async_tokio"] }
freenet-test-network = "0.1.22"
httptest = "0.16"
proptest = "1"
regex = "1"
rstest = "0.26"
serial_test = "3"
statrs = "0.18"
test-log = "0.2"
testresult = "0.4"
turmoil = "0.7"
which = "8.0"

# Versioning
semver = { version = "1", features = ["serde"] }

# Proc macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }

# Platform-specific
libc = "0.2"
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }
winapi = "0.3"
tao = { version = "0.35", default-features = false, features = ["rwh_06"] }
wry = { version = "0.55", default-features = false, features = ["os-webview"] }
winreg = "0.56"
tray-icon = "0.24"
muda = "0.19"
zip = { version = "8", default-features = false, features = ["deflate", "time"] }

# Freenet
freenet-stdlib = "0.8.0"

# Crypto (secrets-at-rest KEK + DEK derivation, see crates/core/src/config/kek.rs).
# `sha2` is already declared above (workspace-wide); only `hkdf` and `keyring`
# are added here.
#
# `keyring` features are deliberately restricted to the per-platform native
# stores that have NO system-package build dependencies:
#
# - `apple-native`: macOS Keychain (Security framework, ships with macOS).
# - `windows-native`: Credential Manager (Win32 API, ships with Windows).
#
# **Linux intentionally has no keyring feature here.** The only persistent
# Linux options in `keyring 3.x` are `sync-secret-service` /
# `async-secret-service` (D-Bus Secret Service, requires libdbus-1-dev at
# build time) or `linux-native-sync-persistent` (which itself depends on
# sync-secret-service for KEK persistence beyond process exit). Both
# require libdbus-1-dev, which is absent on typical CI runners and
# headless production servers. Linux nodes fall back to the file backend
# (`secrets_dir/node_kek`, 0o600) or systemd credentials
# (`$CREDENTIALS_DIRECTORY/freenet-kek`) — both header-only, no system deps.
#
# Operators on Linux who do have libdbus-1-dev and want GNOME/KDE keyring
# integration can re-enable the feature in a downstream fork; the
# `KekBackend` abstraction in `crates/core/src/config/kek.rs` is
# backend-agnostic so the in-tree code remains identical.
keyring = { version = "3.6", default-features = false, features = [
    "apple-native",
    "windows-native",
] }
hkdf = "0.13"

[profile.dev.package."*"]
opt-level = 3

# [profile.release]
# strip = true
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"
