[workspace]
resolver = "2"
members = ["contracts/*", "web", "web/container"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 's'
debug = false
codegen-units = 1
panic = 'abort'
strip = true

[workspace.dependencies]
chrono = "0.4"
rsa = { version = "0.9.2", default-features = false, features = ["serde", "pem", "sha2"] }
serde = "1"
serde_json = "1"
once_cell = "1"

# freenet-stdlib = { version = "0.0.7" }
freenet-stdlib = { path = "../../stdlib/rust" }
freenet-aft-interface = { path = "../../modules/antiflood-tokens/interfaces" }
