[workspace]
resolver = "2"
members = ["contracts/*", "web", "web/container"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 's'
debug = false
codegen-units = 1
panic = 'abort'
strip = true

[workspace.dependencies]
chrono = "0.4"
rsa = { version = "0.9.2", default-features = false, features = ["serde", "pem", "sha2"] }
serde = "1"
serde_json = "1"

# freenet-stdlib = { git = "https://github.com/freenet/freenet-stdlib.git", tag = "v0.1.14" }
freenet-stdlib = { git = "https://github.com/freenet/freenet-stdlib.git", tag = "v0.1.14" }
freenet-aft-interface = { path = "../../modules/antiflood-tokens/interfaces" }
