[workspace]
resolver = "2"
members = ["contracts/*", "web/container"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 's'
debug = false
codegen-units = 1
panic = 'abort'
strip = true

[workspace.dependencies]
freenet-stdlib = { path = "../../stdlib/rust", default-features = false, features = ["contract"] }

#[target.wasm32-unknown-unknown]
#rustflags = ["-C", "link-arg=--import-memory"]
