[workspace]
resolver = "2"
members = ["contracts/ping", "app", "types"]

[workspace.dependencies]
# freenet-stdlib = { path = "./../../stdlib/rust", features = ["contract"] }
freenet-stdlib = { version = "0.1.30" }
freenet-ping-types = { path = "types", default-features = false }
chrono = { version = "0.4", default-features = false }
clap = "4"
testresult = "0.4"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 's'
debug = false
codegen-units = 1
panic = 'abort'
strip = true
