[workspace]
resolver = "2"
members = ["contracts/ping", "app", "types"]

# Temporary git override for issue #3860 — the path-dep on freenet-core in
# `app/` transitively requires freenet-stdlib 0.5.0, which is not yet on
# crates.io. This `[patch.crates-io]` is a duplicate of the one in the root
# freenet-core `Cargo.toml`; nested workspaces do not inherit `[patch]` from
# their parent, so it must be repeated here for the ping contract build to
# resolve dependencies in CI. MUST be removed before merge — replace with
# the published 0.5.0 from crates.io. Tracked in freenet/freenet-core#3865.
[patch.crates-io]
freenet-stdlib = { git = "https://github.com/freenet/freenet-stdlib", branch = "feat-message-origin-delegate" }

[workspace.dependencies]
# freenet-stdlib = { path = "./../../stdlib/rust", features = ["contract"] }
freenet-stdlib = { version = "0.3.5" }
freenet-ping-types = { path = "types", default-features = false }

# Core dependencies
anyhow = "1"
bincode = "1"
chrono = { version = "0.4", default-features = false }
clap = "4"
futures = "0.3"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

# Async/networking
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27.0"

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
serial_test = "3"
test-log = "0.2"
testresult = "0.4"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 's'
debug = false
codegen-units = 1
panic = 'abort'
strip = true
