[package]
name = "test-web-contract"
version = "0.0.0"
edition = "2021"
rust-version = "1.58.0"
resolver = "2"
publish = false

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde", "alloc"] }
locutus-stdlib = { path = "../../crates/locutus-stdlib" }
serde = "1"
serde_json = "1"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'
debug = false
codegen-units = 1
panic = 'abort'

#[target.wasm32-unknown-unknown]
#rustflags = ["-C", "link-arg=--import-memory"]

[build-dependencies]
byteorder = "1"
serde = "1"
serde_json = "1"
tar = "0.4"
xz2 = "0.1"
