[package]
name = "fdev"
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
publish = true
description = "Freenet development tool"
license-file = "LICENSE.md"
repository = "https://github.com/freenet/freenet"

[dependencies]
bytesize = "1.3"
anyhow = "1"
axum = { default-features = false, features = ["http1", "matched-path", "query", "tower-log", "ws"], workspace = true }
bincode = "1"
bs58 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dashmap = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
glob = "0.3"
pico-args = "0.5"
prettytable-rs = "0.10"
rand = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { workspace = true }
semver = { workspace = true }
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "signal", "parking_lot", "process"] }
tokio-tungstenite = "0.26.1"
toml = { version = "0.9", features = ["default", "preserve_order"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
xz2 = { version = "0.1", features = ["tokio"] }
reqwest = { version = "0.12", features = ["json"] }
http = "1.2"

# internal
freenet = { path = "../core", version = "0.1.20" }
freenet-stdlib = { workspace = true }

[features]
trace-ot = ["freenet/trace-ot"]
