[package]
name = "fdev"
version = "0.3.107"
edition = "2021"
rust-version = "1.80"
publish = true
description = "Freenet development tool"
license-file = "LICENSE.md"
repository = "https://github.com/freenet/freenet-core"
readme = "README.md"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/fdev-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "fdev"

[dependencies]
bytesize = "2.3"
anyhow = { workspace = true }
axum = { workspace = true, default-features = false, features = ["http1", "matched-path", "query", "tower-log", "ws"] }
bincode = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dashmap = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
glob = "0.3"
prettytable-rs = "0.10"
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
semver = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros", "signal", "parking_lot", "process"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true, features = ["default", "preserve_order"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
xz2 = { workspace = true, features = ["tokio"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
http = { workspace = true }

# internal
freenet = { path = "../core", version = "0.1.106", features = ["testing"] }
freenet-stdlib = { workspace = true }

[features]
trace-ot = ["freenet/trace-ot"]
# testing feature is always enabled for fdev (it's a development tool)
